sfdx/force-app/main/default/objects/Caller_Intent_Setting__mdt/Caller_Intent_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Caller Intent Setting</label>
    <pluralLabel>Caller Intent Settings</pluralLabel>
</CustomObject>