sfdx/force-app/main/default/objects/Caller_Intent_Setting__mdt/fields/group__c.field-meta.xml
<CustomField>
    <fullName>group__c</fullName>
    <label>group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>