sfdx/force-app/main/default/objects/Caller_Intent_Setting__mdt/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>phone</fullName>
                <default>true</default>
                <label>phone</label>
            </value>
            <value>
                <fullName>picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>