sfdx/force-app/main/default/objects/Caller_Intent_Setting__mdt/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <label>value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>